redistributable/third-party/db/sqlite/sqlite-netFx-source-1.0.80.0/System.Data.SQLite/UnsafeNativeMethods.cs


            //
            // NOTE: If we failed to query the base directory, stop now.
            //
            if (directory == null)
                return IntPtr.Zero;

            //
            // NOTE: If the native SQLite library exists in the base directory
            //       itself, stop now.
            //
            string fileName = FixUpDllFileName(Path.Combine(directory,
                SQLITE_DLL));

            if (File.Exists(fileName))
                return IntPtr.Zero;

            //
            // NOTE: If the specified processor architecture is null, use the
            //       default.
            //
            if (processorArchitecture == null)
                processorArchitecture = GetProcessorArchitecture();

            //
            // NOTE: If we failed to query the processor architecture, stop now.
            //
            if (processorArchitecture == null)
                return IntPtr.Zero;

            //
            // NOTE: Build the full path and file name for the native SQLite
            //       library using the processor architecture name.
            //
            fileName = FixUpDllFileName(Path.Combine(Path.Combine(directory,
                processorArchitecture), SQLITE_DLL));

            //
            // NOTE: If the file name based on the processor architecture name
            // is not found, try using the associated platform name.
            //
            if (!File.Exists(fileName))
            {
                //
                // NOTE: Attempt to translate the processor architecture to a
                //       platform name.
                //
                string platformName = GetPlatformName(processorArchitecture);

                //
                // NOTE: If we failed to translate the platform name, stop now.
                //
                if (platformName == null)
                    return IntPtr.Zero;

                //
                // NOTE: Build the full path and file name for the native SQLite
                //       library using the platform name.
                //
                fileName = FixUpDllFileName(Path.Combine(Path.Combine(directory,
                    platformName), SQLITE_DLL));

                //
                // NOTE: If the file does not exist, skip trying to load it.
                //
                if (!File.Exists(fileName))
                    return IntPtr.Zero;
            }

            try
            {
                //
                // NOTE: Show exactly where we are trying to load the native
                //       SQLite library from.
                //
                Trace.WriteLine(String.Format(
                    "Trying to load native SQLite library \"{0}\"...",
                    fileName));

                //
                // NOTE: Attempt to load the native library.  This will either
                //       return a valid native module handle, return IntPtr.Zero,
                //       or throw an exception.
                //
                return LoadLibrary(fileName);
            }
            catch (Exception e)
            {
                try
                {
                    //
                    // NOTE: First, grab the last Win32 error number.
                    //
                    int lastError = Marshal.GetLastWin32Error();

                    //
                    // NOTE: Show where we failed to load the native SQLite
                    //       library from along with the Win32 error code and
                    //       exception information.
                    //
                    Trace.WriteLine(String.Format(
                        "Failed to load native SQLite library \"{0}\" " +
                        "(getLastError = {1}): {2}",
                        fileName, lastError, e)); /* throw */
                }
                catch
                {
                    // do nothing.
                }
            }

            return IntPtr.Zero;
        }
#endif
#endif
        #endregion

        /////////////////////////////////////////////////////////////////////////

#if !SQLITE_STANDARD

#if !USE_INTEROP_DLL

#if !PLATFORM_COMPACTFRAMEWORK
    private const string SQLITE_DLL = "System.Data.SQLite.dll";
#else
    internal const string SQLITE_DLL = "SQLite.Interop.080.dll";
#endif // PLATFORM_COMPACTFRAMEWORK

#else
        private const string SQLITE_DLL = "SQLite.Interop.dll";
#endif // USE_INTEROP_DLL

#else
    private const string SQLITE_DLL = "sqlite3";
#endif

        // This section uses interop calls that also fetch text length to optimize conversion.  
        // When using the standard dll, we can replace these calls with normal sqlite calls and 
        // do unoptimized conversions instead afterwards
        #region interop added textlength calls

#if !SQLITE_STANDARD

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_bind_parameter_name_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_database_name_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_database_name16_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_decltype_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_decltype16_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_name_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_name16_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_origin_name_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_origin_name16_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_table_name_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_table_name16_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_text_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_column_text16_interop(IntPtr stmt, int index, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_errmsg_interop(IntPtr db, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern int sqlite3_prepare_interop(IntPtr db, IntPtr pSql, int nBytes, out IntPtr stmt, out IntPtr ptrRemain, out int nRemain);

        [DllImport(SQLITE_DLL)]
        internal static extern int sqlite3_table_column_metadata_interop(IntPtr db, byte[] dbName, byte[] tblName, byte[] colName, out IntPtr ptrDataType, out IntPtr ptrCollSeq, out int notNull, out int primaryKey, out int autoInc, out int dtLen, out int csLen);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_value_text_interop(IntPtr p, out int len);

        [DllImport(SQLITE_DLL)]
        internal static extern IntPtr sqlite3_value_text16_interop(IntPtr p, out int len);

#endif
        // !SQLITE_STANDARD

        #endregion

        // These functions add existing functionality on top of SQLite and require a little effort to
        // get working when using the standard SQLite library.
        #region interop added functionality

#if !SQLITE_STANDARD

        [DllImport(SQLITE_DLL)]
        internal static extern int sqlite3_close_interop(IntPtr db);

        [DllImport(SQLITE_DLL)]
        internal static extern int sqlite3_create_function_interop(IntPtr db, byte[] strName, int nArgs, int nType, IntPtr pvUser, SQLiteCallback func, SQLiteCallback fstep, SQLiteFinalCallback ffinal, int needCollSeq);

        [DllImport(SQLITE_DLL)]
        internal static extern int sqlite3_finalize_interop(IntPtr stmt);

        [DllImport(SQLITE_DLL)]
        internal static extern int sqlite3_open_interop(byte[] utf8Filename, int flags, out IntPtr db);

        [DllImport(SQLITE_DLL)]
        internal static extern int sqlite3_open16_interop(byte[] utf8Filename, int flags, out IntPtr db);

        [DllImport(SQLITE_DLL)]
        internal static extern int sqlite3_reset_interop(IntPtr stmt);

#endif
        // !SQLITE_STANDARD

        #endregion

        // The standard api call equivalents of the above interop calls
        #region standard versions of interop functions

#if SQLITE_STANDARD

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern int sqlite3_close(IntPtr db);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern int sqlite3_create_function(IntPtr db, byte[] strName, int nArgs, int nType, IntPtr pvUser, SQLiteCallback func, SQLiteCallback fstep, SQLiteFinalCallback ffinal);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern int sqlite3_finalize(IntPtr stmt);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern int sqlite3_open_v2(byte[] utf8Filename, out IntPtr db, int flags, IntPtr vfs);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
#else
    [DllImport(SQLITE_DLL, CharSet = CharSet.Unicode)]
#endif
    internal static extern int sqlite3_open16(string fileName, out IntPtr db);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern int sqlite3_reset(IntPtr stmt);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern IntPtr sqlite3_bind_parameter_name(IntPtr stmt, int index);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern IntPtr sqlite3_column_database_name(IntPtr stmt, int index);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern IntPtr sqlite3_column_database_name16(IntPtr stmt, int index);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern IntPtr sqlite3_column_decltype(IntPtr stmt, int index);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern IntPtr sqlite3_column_decltype16(IntPtr stmt, int index);

#if !PLATFORM_COMPACTFRAMEWORK
    [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
#else
    [DllImport(SQLITE_DLL)]
#endif
    internal static extern IntPtr sqlite3_column_name(IntPtr stmt, int index);
